# arcaflow-plugin-boot-time

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  workflow.yaml
arcaflow_plugin_boot_time/: boot_time_plugin.py
tests/: test_arcaflow_plugin_boot_time.py
